chore: upgrade dependencies