@@ -23,18 +23,18 @@
     <properties>
         <googleformatter.maven.plugin.version>1.7.5</googleformatter.maven.plugin.version>
         <jacoco.version>0.8.8</jacoco.version>
-        <jakarta.version>4.0.0</jakarta.version>
-        <javafx.version>20-ea+3</javafx.version>
-        <jaxb.version>4.0.2</jaxb.version>
-        <log4j2.version>2.20.0</log4j2.version>
+        <jakarta.version>4.0.1</jakarta.version>
+        <javafx.version>21.0.1</javafx.version>
+        <jaxb.version>4.0.4</jaxb.version>
+        <log4j2.version>2.22.1</log4j2.version>
         <maven.compiler.source>21</maven.compiler.source>
         <maven.compiler.target>21</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <slf4j.test.version>2.8.1</slf4j.test.version>
-        <slf4j.version>2.0.6</slf4j.version>
+        <slf4j.test.version>3.0.1</slf4j.test.version>
+        <slf4j.version>2.0.9</slf4j.version>
         <sortpom.version>3.2.1</sortpom.version>
         <spotless.version>2.34.0</spotless.version>
-        <testng.version>7.7.1</testng.version>
+        <testng.version>7.9.0</testng.version>
     </properties>
     <dependencyManagement>
         <dependencies>
@@ -91,6 +91,7 @@
                         <compilerArgs>
                             <arg>--enable-preview</arg>
                             <arg>-Xlint:unchecked</arg>
+                            <arg>-proc:full</arg>
                         </compilerArgs>
                     </configuration>
                 </plugin>
